PythonServer/server/parser/parser2.js
var Error = require("./error");
const fs = require("fs");
const { graphviz } = require("node-graphviz");
const {exec} = require('child_process')

class Parser {
  constructor(tokenList) {
    this.tokenList = tokenList;
    this.preAnalysis = tokenList[0];
    this.numPreAnalysis = 0;
    this.errorList = [];
    this.stringTraduccion = "";
    this.defFound = false;
    this.contTab = 0;
    this.elifFound = false;
    this.mainFound = false;
    this.auxMain = "";
    this.llamadaMetodo = false;
    this.forFound = false;
    this.forValue1 = "";
    this.forValue2 = "";
    this.errorFound = false;
    this.doWhileFound = false;
    this.doWhileContent = "";
    this.whileOfDo = false;

    // AST
    this.astString = "digraph G {\n";
    this.nodeCont = 2;
    this.inicioGraphed = false;
    // Class
    this.primeraSentenciaClase = false;
    this.primeraListaClases = false;
    this.padreListaClases = "";
    this.primeraDeclaracionMetodosFunciones = false;
    this.padreDeclaracionMetodosFunciones = "";
    this.padreListaDeclaracionMetodosFunciones = '';
    // Interface
    this.primeraSentenciaInterfaz = false;
    this.padreDeclaracionFunciones = '';
    this.primeraDeclaracionFunciones = false;
    this.padreListaDeclaracionFunciones = '';
    this.primeraListaDeclaracionFunciones = false;
    // Tipo
    this.padreTipo = '';
    // Declaracion Parametros
    this.padreDeclaracionParametros = '';
    this.padreDeclaracionParametrosInterfaz = '';
    // Lista de Parametros
    this.padreListaParametros = '';
    // Lista de instrucciones entre llaves
    this.padreListaInstruccionesLlaves = '';
    // Lista instrucciones
    this.padreListaInstrucciones = '';
    this.padreListaInstruccionesP = '';
    // Instruccion
    this.padreSentenciaMain = '';
    this.padreInstruccion = '';
    this.padreSentenciaIf = '';
    this.padreSentenciaWhile = '';
    this.padreSentenciaDoWhile = '';
    this.padreSentenciaBreak = '';
    this.padreAsignacionSimple = '';
    this.padreDeclaracionVariable = '';
    this.padreIncrementable = '';
    this.padreDecrementable = '';
    this.padreSentenciaContinue = '';
    this.padreLlamadaMetodo = '';
    this.padreSentenciaFor = '';
    this.padreSentenciaReturnFunciones = ''
    this.padreSentenciaReturnMetodos = ''
    this.padreSentenciaPrint = ''

    // E
    this.padreE = '';
    this.padreEP = '';
    this.padreT = '';
    this.padreTP = '';
    this.padreF = '';

    // for
    this.padreDeclaracionFor = '';
    this.padreIncrementoDecremento = '';

    // Expresion
    this.padreExpresion = '';
    this.padreOperadorNot = '';
    this.padreCondicion = ''
    this.padreCondicionLogica = ''
    this.padreListaExpresiones = '';

    // IF ELSE
    this.padreOpcionElse = '';
    this.padreListaIf = '';

    // Asignacion
    this.padreAsignacionSimpleP = '';
    this.padreAsignacion = '';
    this.padreListaID = '';
    this.padreDeclaracionVariableP = '';

    // Llamada Metodo
    this.padreParametrosLlamada = '';
    this.primeraSentenciaInterfaz = false;

  }

  parse() {
    this.Inicio();
  }

  Inicio() {
    if (!this.inicioGraphed) {
      this.astString += "n0" + '[label="INICIO"];\n';
    }
    if (this.preAnalysis.type == "RESERVED_PUBLIC") {
      if (!this.inicioGraphed) {
        this.astString += "n1" + '[label="public"];\n';
        this.inicioGraphed = true;
        this.astString += "n0 -> n1;\n";
      }
      this.match("RESERVED_PUBLIC");
      if (this.preAnalysis.type == "RESERVED_CLASS") {
        this.SentenciaClase();
        this.ListaClases();
        this.Inicio();
        //this.match("LAST");
      } else if (this.preAnalysis.type == "RESERVED_INTERFACE") {
        this.SentenciaInterfaz();
      
        this.ListaInterfaces();
        this.Inicio();
        //this.match("LAST");
      }
    } else {
      this.match("LAST");
      this.astString += "}";
      fs.writeFile('ast.dot', this.astString, (error) => {
        if(error){
          console.log(error)
        } 
      });
      graphviz.dot(this.astString, 'svg').then((svg) => {
        // Write the SVG to file
        fs.writeFileSync('public/ast.svg', svg);
      });
      exec("dot -Tpdf ast.dot -o public/ast.pdf", (error, data, getter) => {
        if(error){
          console.log("error",error.message);
          return;
        }
        if(getter){
          console.log("data",data);
          return;
        }
        console.log("data",data);
      
      });
    }
  }

  SentenciaClase() {
    // public class { LISTA_DECLARACION_METODOS_FUNCIONES }
    //if(!this.primeraSentenciaClase){
      this.astString += "n" + this.nodeCont + '[label="public"];\n';
      this.nodeCont++;
    //} 
    this.astString += "n" + this.nodeCont + '[label="SENTENCIA_CLASE"];\n';
    let father = "n" + this.nodeCont;
    //if (!this.primeraSentenciaClase) {
      this.astString += "n0->n" + (this.nodeCont - 1) + ";\n";
      this.astString += "n0->n" + this.nodeCont + ";\n";
      this.primeraSentenciaClase = true;
    /*} else {
      this.astString += this.padreListaClases + "->n" + this.nodeCont + ";\n";
    }*/
    this.nodeCont++;
    this.stringTraduccion += this.preAnalysis.value + " ";
    this.astString += "n" + this.nodeCont + '[label="class"];\n';
    this.nodeCont++;
    this.astString +=
      "n" + (this.nodeCont - 2) + "-> n" + (this.nodeCont - 1) + ";\n";
    this.match("RESERVED_CLASS");
    this.stringTraduccion += this.preAnalysis.value;
    this.astString +=
      "n" + this.nodeCont + '[label="' + this.preAnalysis.value + '"];\n';
    this.astString += father + "->n" + this.nodeCont + ";\n";
    this.nodeCont++;
    this.match("ID");
    this.stringTraduccion += ":\n";
    this.astString += "n" + this.nodeCont + '[label="{"];\n';
    this.astString += father + "->n" + this.nodeCont + ";\n";
    this.nodeCont++;
    this.match("LEFT_BRACE");
    this.contTab++; // Indenta contenido dentro de la clase
    this.astString += "n" + this.nodeCont + '[label="LISTA_DECLARACION_METODOS_FUNC"];\n';
    this.astString += father + "->n" + this.nodeCont + ";\n";
    this.padreListaDeclaracionMetodosFunciones = 'n' + this.nodeCont;
    this.nodeCont++;
    this.ListaDeclaracionMetodosFunciones();
    this.padreListaDeclaracionMetodosFunciones = '';
    this.stringTraduccion += "\n";
    this.astString += "n" + this.nodeCont + '[label="}"];\n';
    this.astString += father + "->n" + this.nodeCont + ";\n";
    this.nodeCont++;
    this.match("RIGHT_BRACE");
    this.contTab--; // Indenta contenido para manterner clases aisladas
  }

  ListaClases() {
    this.Comentario();
    // SENTENCIA_CLASE LISTA_CLASES
    if (
      this.preAnalysis.type == "RESERVED_PUBLIC" &&
      this.tokenList[this.numPreAnalysis + 1].type == "RESERVED_CLASS"
    ) {
      if (!this.primeraListaClases) {
        this.astString += "n" + this.nodeCont + '[label="LISTA_CLASES"];\n';
        this.astString += "n0->n" + this.nodeCont + ";\n";
        this.padreListaClases = "n" + this.nodeCont;
        this.nodeCont++;
        this.primeraListaClases = true;
      }
      this.tabular();
      this.match("RESERVED_PUBLIC");
      this.astString += "n" + this.nodeCont + '[label="public"];\n';
      this.astString += this.padreListaClases + "->n" + this.nodeCont + ";\n";
      this.nodeCont++;
      this.SentenciaClase();
      this.ListaClases();
    }
  }

  SentenciaInterfaz() {
    this.astString += "n" + this.nodeCont + '[label="SENTENCIA_INTERFAZ"];\n';
    let father = "n" + this.nodeCont;
    if (!this.primeraSentenciaInterfaz) {
      this.astString += "n0->n" + this.nodeCont + ";\n";
      this.primeraSentenciaInterfaz = true;
    } else {
      this.astString += "n" + (this.nodeCont - 2) + "->n" + this.nodeCont + ";\n";
    }
    this.nodeCont++;
    this.stringTraduccion += "class ";
    this.astString += "n" + this.nodeCont + '[label="interface"];\n';
    this.astString += father + "->n" + this.nodeCont + ";\n";
    this.nodeCont++;
    this.match("RESERVED_INTERFACE");
    this.stringTraduccion += this.preAnalysis.value;
    this.astString +=
      "n" + this.nodeCont + '[label="' + this.preAnalysis.value + '"];\n';
    this.astString += father + "->n" + this.nodeCont + ";\n";
    this.nodeCont++;
    this.match("ID");
    this.stringTraduccion += ":\n";
    this.astString += "n" + this.nodeCont + '[label="{"];\n';
    this.astString += father + "->n" + this.nodeCont + ";\n";
    this.nodeCont++;
    this.match("LEFT_BRACE");
    this.contTab++; // Indenta contenido dentro de la clase
    this.astString += "n" + this.nodeCont + '[label="LISTA_DECLARACION_FUNCIONES"];\n';
    this.astString += father + "->n" + this.nodeCont + ";\n";
    this.padreListaDeclaracionFunciones = 'n' + this.nodeCont;
    this.nodeCont++;
    this.ListaDeclaracionFunciones();
    this.padreListaDeclaracionFunciones = '';
    this.astString += "n" + this.nodeCont + '[label="}"];\n';
    this.astString += father + "->n" + this.nodeCont + ";\n";
    this.nodeCont++;
    this.match("RIGHT_BRACE");
    this.contTab--; // Indenta contenido para manterner clases aisladas
  }

  ListaInterfaces() {
    this.Comentario();
    if (this.preAnalysis.type == "RESERVED_INTERFACE") {
      this.tabular();
      this.SentenciaInterfaz();
      this.ListaInterfaces();
    }
  }

  ListaDeclaracionMetodosFunciones() {
    this.Comentario();
    if (this.preAnalysis.type == "RESERVED_PUBLIC") {
      this.astString += "n" + this.nodeCont + '[label="DECLARACION_METODOS_FUNCIONES"];\n';
      this.astString += this.padreListaDeclaracionMetodosFunciones + "->n" + this.nodeCont + ";\n";
      this.padreDeclaracionMetodosFunciones = 'n' + this.nodeCont;
      this.nodeCont++;
      this.DeclaracionMetodosFunciones();
      this.padreDeclaracionMetodosFunciones = '';
      this.ListaDeclaracionMetodosFunciones();
    } else if (
      (this.preAnalysis.type == "SEMICOLON" ||
        this.preAnalysis.type == "RIGHT_BRACE") &&
      this.errorFound == true
    ) {
      this.errorFound = false;
      let newError = new Error(
        "Se recuperó del error en la fila " + this.preAnalysis.row
      );
      this.errorList.push(newError);
      this.numPreAnalysis++;
      this.preAnalysis = this.tokenList[this.numPreAnalysis];
      this.astString += "n" + this.nodeCont + '[label="DECLARACION_METODOS_FUNCIONES"];\n';
      this.astString += this.padreListaDeclaracionMetodosFunciones + "->n" + this.nodeCont + ";\n";
      this.padreDeclaracionMetodosFunciones = 'n' + this.nodeCont;
      this.nodeCont++;
      this.DeclaracionMetodosFunciones();
      this.padreDeclaracionMetodosFunciones = '';
      this.ListaDeclaracionMetodosFunciones();
    }
  }

  ListaDeclaracionFunciones() {
    this.Comentario();
    if (this.preAnalysis.type == "RESERVED_PUBLIC") {
      this.astString += "n" + this.nodeCont + '[label="DECLARACION_FUNCIONES"];\n';
      this.astString += this.padreListaDeclaracionFunciones + "->n" + this.nodeCont + ";\n";
      this.padreDeclaracionFunciones = 'n' + this.nodeCont;
      this.nodeCont++;
      this.DeclaracionFunciones();
      this.padreDeclaracionFunciones = '';
      this.ListaDeclaracionFunciones();
    } else if (
      (this.preAnalysis.type == "SEMICOLON" ||
        this.preAnalysis.type == "RIGHT_BRACE") &&
      this.errorFound == true
    ) {
      this.errorFound = false;
      let newError = new Error(
        "Se recuperó del error en la fila " + this.preAnalysis.row
      );
      this.errorList.push(newError);
      this.numPreAnalysis++;
      this.preAnalysis = this.tokenList[this.numPreAnalysis];
      this.astString += "n" + this.nodeCont + '[label="DECLARACION_FUNCIONES"];\n';
      this.astString += this.padreListaDeclaracionFunciones + "->n" + this.nodeCont + ";\n";
      this.padreDeclaracionFunciones = 'n' + this.nodeCont;
      this.nodeCont++;
      this.DeclaracionFunciones();
      this.padreDeclaracionFunciones = '';
      this.ListaDeclaracionFunciones();
    }
  }

  DeclaracionMetodosFunciones() {
    this.Comentario();
    this.tabular(); // ESTE ES FIJO
    this.match("RESERVED_PUBLIC");
    this.astString += "n" + this.nodeCont + '[label="public"];\n';
    this.astString += this.padreDeclaracionMetodosFunciones + "->n" + this.nodeCont + ";\n";
    this.nodeCont++;
    if (this.preAnalysis.type == "RESERVED_VOID") {
      this.stringTraduccion += "def ";
      this.defFound = true;
      this.match("RESERVED_VOID");
      this.astString += "n" + this.nodeCont + '[label="void"];\n';
      this.astString += this.padreDeclaracionMetodosFunciones + "->n" + this.nodeCont + ";\n";
      this.nodeCont++;
    } else if (this.preAnalysis.type == "RESERVED_STATIC") {
      this.match("RESERVED_STATIC");
      this.astString += "n" + this.nodeCont + '[label="static"];\n';
      this.astString += this.padreDeclaracionMetodosFunciones + "->n" + this.nodeCont + ";\n";
      this.nodeCont++;
      this.mainFound = true;
      this.astString += "n" + this.nodeCont + '[label="SENTENCIA_MAIN"];\n';
      this.astString += this.padreDeclaracionMetodosFunciones + "->n" + this.nodeCont + ";\n";
      this.padreSentenciaMain = 'n' + this.nodeCont;
      this.nodeCont++;
      this.SentenciaMain();
      this.padreSentenciaMain = '';
      return;
    } else if (
      this.preAnalysis.type != "RESERVED_VOID" &&
      this.preAnalysis.type != "RESERVED_STATIC"
    ) {
      this.defFound = true;
      this.stringTraduccion += "def ";
      this.astString += "n" + this.nodeCont + '[label="TIPO"];\n';
      this.astString += this.padreDeclaracionMetodosFunciones + "->n" + this.nodeCont + ";\n";
      this.padreTipo = 'n' + this.nodeCont;
      this.nodeCont++;
      this.Tipo();
      this.padreTipo = '';
      this.defFound = false;
    }
    this.stringTraduccion += this.preAnalysis.value;
    this.astString += "n" + this.nodeCont + '[label="ID"];\n';
    this.astString += this.padreDeclaracionMetodosFunciones + "->n" + this.nodeCont + ";\n";
    this.nodeCont++;
    this.astString += "n" + this.nodeCont + '[label="'+ this.preAnalysis.value  +'"];\n';
    this.astString += 'n' + (this.nodeCont - 1) + "->n" + this.nodeCont + ";\n";
    this.nodeCont++;
    this.match("ID");
    this.stringTraduccion += this.preAnalysis.value;
    this.astString += "n" + this.nodeCont + '[label="("];\n';
    this.astString += this.padreDeclaracionMetodosFunciones + "->n" + this.nodeCont + ";\n";
    this.nodeCont++;
    this.match("LEFT_PARENT");
    this.astString += "n" + this.nodeCont + '[label="DECLARACION_PARAMETROS"];\n';
    this.astString += this.padreDeclaracionMetodosFunciones + "->n" + this.nodeCont + ";\n";
    this.padreDeclaracionParametros = 'n' + this.nodeCont;
    this.nodeCont++;
    this.DeclaracionParametros();
    this.padreDeclaracionParametros = '';
  }

  DeclaracionFunciones() {
    this.Comentario();
    this.tabular(); // ESTE ES FIJO
    this.match("RESERVED_PUBLIC");
    this.astString += "n" + this.nodeCont + '[label="public"];\n';
    this.astString += this.padreDeclaracionFunciones + "->n" + this.nodeCont + ";\n";
    this.nodeCont++;
    this.stringTraduccion += "self.";
    
    this.astString += "n" + this.nodeCont + '[label="TIPO"];\n';
    this.astString += this.padreDeclaracionFunciones + "->n" + this.nodeCont + ";\n";
    this.padreTipo = 'n' + this.nodeCont;
    this.nodeCont++;
    this.Tipo();
    this.padreTipo = '';

    this.stringTraduccion += this.preAnalysis.value;
    this.astString += "n" + this.nodeCont + '[label="ID"];\n';
    this.astString += this.padreDeclaracionFunciones + "->n" + this.nodeCont + ";\n";
    this.nodeCont++;
    this.astString += "n" + this.nodeCont + '[label="'+ this.preAnalysis.value  +'"];\n';
    this.astString += 'n' + (this.nodeCont - 1) + "->n" + this.nodeCont + ";\n";
    this.nodeCont++;
    this.match("ID");
    this.stringTraduccion += this.preAnalysis.value;
    this.astString += "n" + this.nodeCont + '[label="("];\n';
    this.astString += this.padreDeclaracionFunciones + "->n" + this.nodeCont + ";\n";
    this.nodeCont++;
    this.match("LEFT_PARENT");
    this.astString += "n" + this.nodeCont + '[label="DECLARACION_PARAMETROS_INTERFAZ"];\n';
    this.astString += this.padreDeclaracionFunciones + "->n" + this.nodeCont + ";\n";
    this.padreDeclaracionParametrosInterfaz = 'n' + this.nodeCont;
    this.nodeCont++;
    this.DeclaracionParametrosInterfaz();
    this.padreDeclaracionParametrosInterfaz = '';
  }

  DeclaracionParametrosInterfaz() {
    if (this.preAnalysis == "RIGHT PARENT") {
      this.stringTraduccion += this.preAnalysis.value;
      this.astString += "n" + this.nodeCont + '[label=")"];\n';
      this.astString += this.padreDeclaracionParametrosInterfaz + "->n" + this.nodeCont + ";\n";
      this.nodeCont++;
      this.match("RIGHT_PARENT");
      this.stringTraduccion = this.preAnalysis.value + "\n";
      this.astString += "n" + this.nodeCont + '[label=";"];\n';
      this.astString += this.padreDeclaracionParametrosInterfaz + "->n" + this.nodeCont + ";\n";
      this.nodeCont++;
      this.match("SEMICOLON");
    } else {
      this.astString += "n" + this.nodeCont + '[label="TIPO"];\n';
      this.astString += this.padreDeclaracionParametrosInterfaz + "->n" + this.nodeCont + ";\n";
      this.padreTipo = 'n' + this.nodeCont;
      this.nodeCont++;
      this.tipoInterfaz = true;
      this.Tipo();
      this.tipoInterfaz = false;
      this.padreTipo = '';
      this.stringTraduccion += this.preAnalysis.value;
      this.match("ID");
      this.astString += "n" + this.nodeCont + '[label="LISTA_PARAMETROS"];\n';
      this.astString += this.padreDeclaracionParametrosInterfaz + "->n" + this.nodeCont + ";\n";
      this.padreListaParametros = 'n' + this.nodeCont;
      this.nodeCont++;
      this.ListaParametros();
      this.padreListaParametros = '';
      this.stringTraduccion += this.preAnalysis.value;
      this.astString += "n" + this.nodeCont + '[label=")"];\n';
      this.astString += this.padreDeclaracionParametrosInterfaz + "->n" + this.nodeCont + ";\n";
      this.nodeCont++;
      this.match("RIGHT_PARENT");
      this.stringTraduccion += "\n";
      this.astString += "n" + this.nodeCont + '[label=";"];\n';
      this.astString += this.padreDeclaracionParametrosInterfaz + "->n" + this.nodeCont + ";\n";
      this.nodeCont++;
      this.match("SEMICOLON");
    }
  }

  DeclaracionParametros() {
    if (
      this.preAnalysis.type == "RIGHT_PARENT" &&
      this.llamadaMetodo == false
    ) {
      this.stringTraduccion += this.preAnalysis.value + ":\n";
      this.astString += "n" + this.nodeCont + '[label=")"];\n';
      this.astString += this.padreDeclaracionParametros + "->n" + this.nodeCont + ";\n";
      this.nodeCont++;
      this.match("RIGHT_PARENT");
      this.astString += "n" + this.nodeCont + '[label="LISTA_INSTRUCCION_LLAVES"];\n';
      this.astString += this.padreDeclaracionParametros + "->n" + this.nodeCont + ";\n";
      this.padreListaInstruccionesLlaves = 'n' + this.nodeCont;
      this.nodeCont++;
      this.ListaInstrLlaves();
      this.padreListaInstruccionesLlaves = '';
    } else if (
      this.llamadaMetodo == false &&
      this.preAnalysis.type != "RIGHT_PARENT"
    ) {
      this.astString += "n" + this.nodeCont + '[label="TIPO"];\n';
      this.astString += this.padreDeclaracionParametros + "->n" + this.nodeCont + ";\n";
      this.padreTipo = 'n' + this.nodeCont;
      this.nodeCont++;
      this.Tipo();
      this.padreTipo = '';

      if (this.doWhileFound) {
        this.doWhileContent += this.preAnalysis.value;
      } else {
        this.stringTraduccion += this.preAnalysis.value;
      }
      this.astString += "n" + this.nodeCont + '[label="ID"];\n';
      this.astString += this.padreDeclaracionParametros + "->n" + this.nodeCont + ";\n";
      this.nodeCont++;
      if(this.preAnalysis.type =="STRING") {
        this.astString += "n" + this.nodeCont + '[label='+ this.preAnalysis.value  +'];\n';
      } else {
        this.astString += "n" + this.nodeCont + '[label="'+ this.preAnalysis.value  +'"];\n';
      }
      this.astString += 'n'+(this.nodeCont - 1) + "->n" + this.nodeCont + ";\n";
      this.nodeCont++;
      this.match("ID");

      this.astString += "n" + this.nodeCont + '[label="LISTA_PARAMETROS"];\n';
      this.astString += this.padreDeclaracionParametros + "->n" + this.nodeCont + ";\n";
      this.padreListaParametros = 'n' + this.nodeCont;
      this.nodeCont++;
      this.ListaParametros();
      this.padreListaParametros = '';

      this.stringTraduccion += this.preAnalysis.value + ":\n";
      this.astString += "n" + this.nodeCont + '[label=")"];\n';
      this.astString += this.padreDeclaracionParametros + "->n" + this.nodeCont + ";\n";
      this.nodeCont++;
      this.match("RIGHT_PARENT");
      this.astString += "n" + this.nodeCont + '[label="LISTA_INSTRUCCION_LLAVES"];\n';
      this.astString += this.padreDeclaracionParametros + "->n" + this.nodeCont + ";\n";
      this.padreListaInstruccionesLlaves = 'n' + this.nodeCont;
      this.nodeCont++;
      this.ListaInstrLlaves();
      this.padreListaInstruccionesLlaves = '';
    } else if (
      this.llamadaMetodo == true &&
      this.preAnalysis.type == "RIGHT_PARENT"
    ) {
      this.stringTraduccion += this.preAnalysis.value + "\n";
      if (this.doWhileFound) {
        this.doWhileContent += this.preAnalysis.value + "\n";
      } else {
        this.stringTraduccion += this.preAnalysis.value + "\n";
      }
      this.astString += "n" + this.nodeCont + '[label=")"];\n';
      this.astString += this.padreDeclaracionParametros + "->n" + this.nodeCont + ";\n";
      this.nodeCont++;
      this.match("RIGHT_PARENT");
      this.llamadaMetodo = false;
    } else if (
      this.llamadaMetodo == true &&
      this.preAnalysis.type != "RIGHT_PARENT"
    ) {
      
      this.astString += "n" + this.nodeCont + '[label="TIPO"];\n';
      this.astString += this.padreDeclaracionParametros + "->n" + this.nodeCont + ";\n";
      this.padreTipo = 'n' + this.nodeCont;
      this.nodeCont++;
      this.Tipo();
      this.padreTipo = '';

      if (this.doWhileFound) {
        this.doWhileContent += this.preAnalysis.value;
      } else {
        this.stringTraduccion += this.preAnalysis.value;
      }
      this.astString += "n" + this.nodeCont + '[label="ID"];\n';
      this.astString += this.padreDeclaracionParametros + "->n" + this.nodeCont + ";\n";
      this.nodeCont++;
      if(this.preAnalysis.type =="STRING") {
        this.astString += "n" + this.nodeCont + '[label='+ this.preAnalysis.value  +'];\n';
      } else {
        this.astString += "n" + this.nodeCont + '[label="'+ this.preAnalysis.value  +'"];\n';
      }
      
      this.astString += 'n'+(this.nodeCont - 1) + "->n" + this.nodeCont + ";\n";
      this.nodeCont++;
      this.match("ID");

      this.astString += "n" + this.nodeCont + '[label="LISTA_PARAMETROS"];\n';
      this.astString += this.padreDeclaracionParametros + "->n" + this.nodeCont + ";\n";
      this.padreListaParametros = 'n' + this.nodeCont;
      this.nodeCont++;
      this.ListaParametros();
      this.padreListaParametros = '';
      if (this.doWhileFound) {
        this.doWhileContent += this.preAnalysis.value + "\n";
      } else {
        this.stringTraduccion += this.preAnalysis.value + "\n";
      }
      this.astString += "n" + this.nodeCont + '[label=")"];\n';
      this.astString += this.padreDeclaracionParametros + "->n" + this.nodeCont + ";\n";
      this.nodeCont++;
      this.match("RIGHT_PARENT");
      this.llamadaMetodo = false;
    }
  }

  ListaParametros() {
    if (this.preAnalysis.type == "COMMA") {
      if (this.doWhileFound) {
        this.doWhileContent += this.preAnalysis.value + " ";
      } else {
        this.stringTraduccion += this.preAnalysis.value + " ";
      }
      this.astString += "n" + this.nodeCont + '[label=","];\n';
      this.astString += this.padreListaParametros + "->n" + this.nodeCont + ";\n";
      this.nodeCont++;
      this.match("COMMA");
      this.astString += "n" + this.nodeCont + '[label="TIPO"];\n';
      this.astString += this.padreListaParametros + "->n" + this.nodeCont + ";\n";
      this.padreTipo = 'n' + this.nodeCont;
      this.nodeCont++;
      this.Tipo();
      this.padreTipo = '';
      if (this.doWhileFound) {
        this.doWhileContent += this.preAnalysis.value;
      } else {
        this.stringTraduccion += this.preAnalysis.value;
      }

      this.astString += "n" + this.nodeCont + '[label="ID"];\n';
      this.astString += this.padreListaParametros + "->n" + this.nodeCont + ";\n";
      this.nodeCont++;
      this.astString += "n" + this.nodeCont + '[label="'+ this.preAnalysis.value  +'"];\n';
      this.astString += 'n'+(this.nodeCont - 1) + "->n" + this.nodeCont + ";\n";
      this.nodeCont++;
      this.match("ID");
      this.ListaParametros();
    }
  }
